ops-adhoc/ingress-gke.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: frontend
          servicePort: 5000
      - path: /api/datetime/*
        backend:
          serviceName: backend-datetime
          servicePort: 8080
