ops-adhoc/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/datetime
        backend:
          serviceName: backend-datetime
          servicePort: 8080
  - http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 5000
